k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/avengers-network: "true"
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: MONGO_CONNECTION_URL
              value: mongodb://mongo:27017
          image: souravpatnaik/avengers:1.0.0
          name: backend
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
