k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/avengers-network: "true"
        io.kompose.service: mongo
    spec:
      containers:
        - image: mongo:latest
          name: mongo
          resources: {}
      restartPolicy: Always
status: {}
