k8s/avengers-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: avengers-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/avengers-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/avengers-network: "true"
